feat: implement Spring Security tasks